fix(notification): correct the path of `MarkAsRead()`
